fix image overflowing

--- a/src/components/PhotoGallery/PhotoGallery.css
+++ b/src/components/PhotoGallery/PhotoGallery.css
@@ -32,6 +32,7 @@
 
 .featureContainer {
   border: 1px solid yellow;
+  overflow: hidden;
 }
 
 .feature {
